--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
                 <img src="./files/2.svg" class="img_logo" alt="">
             </div>
             <div class="search_div">
-                <input type="text" id="searchInput" placeholder="buscar por campanhas...">
+                <input type="text" id="search_div" placeholder="buscar por campanhas...">
                 <img src="../../files/lupa.png" alt="" class="lupa">
+            </div>
+
+            <div id="userInfo">
+                <button id="logoutButton" onclick="logout()">Sair</button>
             </div>
 
             <div class="profile_div">
                 <img id="userProfileImage" src="./files/foto_perfil.png" alt="" class="foto_perfil">
             </div>
-            <div id="userInfo">
-                <button id="logoutButton" onclick="logout()">Sair</button>
-            </div>
+
         </div>
         <div class="menu">
             <ul>
@@ -58,12 +60,8 @@
         </div>
         <footer>
             <div class="footer">
-                <div class="left">
-                    <h1>RODAPÉ</h1>
-                </div>
-                <div class="right">
-                    <img src="./files/footer.png" class="apps_footer" alt="">
-                </div>
+                <h1>RODAPÉ</h1>
+                <img src="./files/footer.png" class="apps_footer" alt="">
             </div>
         </footer>
     </header>
