--- a/pages/html/publicacoes.html
+++ b/pages/html/publicacoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/publicacoes.css">
+    <link rel="stylesheet" href="../css/publicacoes.css ">
     <title>Doe Mais</title>
 </head>
 
@@ -12,35 +12,42 @@
     <header>
         <div class="header">
             <div class="logo_div">
-                <img src="./files/2.svg" class="img_logo" alt="">
+                <img src="../../files/2.svg" class="img_logo" alt="">
             </div>
             <div class="search_div">
-                <input type="text" placeholder="buscar por campanhas...">
+                <input type="text" id="search_div" placeholder="buscar por campanhas...">
+                <img src="../../files/lupa.png" alt="" class="lupa">
             </div>
-            <div class="profile_div">
 
+            <div id="userInfo">
+                <button id="logoutButton" onclick="logout()">Sair</button>
             </div>
+
+            <div class="profile_div">
+                <img id="userProfileImage" src="../../files/foto_perfil.png" alt="" class="foto_perfil">
+            </div>
+
         </div>
         <div class="menu">
             <ul>
                 <li><a href="../../index.html">INÍCIO</a></li>
                 <li><a href="./doacoes.html">DOAÇÕES</a></li>
                 <li><a href="./publicacoes.html">PUBLICAÇÕES</a></li>
-                <li><a href="./sobre.html">SOBRE NÓS</a></li>
+                <li><a href="./pages/html/sobre.html">SOBRE NÓS</a></li>
+                <li id="li_login" style="display: block;"><a href="./login.html">LOGIN</a></li>
+                <li><button class="add_btn" id="adminButton" style="display: none;">ADICIONAR</button></li>
             </ul>
         </div>
         <footer>
             <div class="footer">
-                <div class="left">
-                    <h1>RODAPÉ</h1>
-                </div>
-                <div class="right">
-                    <img src="../../files/footer.png" class="apps_footer" alt="">
-
-                </div>
+                <h1>RODAPÉ</h1>
+                <img src="../../files/footer.png" class="apps_footer" alt="">
             </div>
         </footer>
     </header>
+
+    <script src="../../js/script.js"></script>
+    <script src="../../js/login.js"></script>
 </body>
 
 </html>
