alterações na responsividade

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <footer>
             <div class="footer">
-                <h1>RODAPÉ</h1>
+                <h1>rodapé</h1>
                 <img src="./files/footer.png" class="apps_footer" alt="">
             </div>
         </footer>
