correção na responsividade do index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./files/2.svg" class="img_logo" alt="">
             </div>
             <div class="search_div">
-                <input type="text" id="search_div" placeholder="buscar por campanhas...">
+                <input type="text" id="search_div" placeholder="Buscar por Campanhas...">
                 <img src="../../files/lupa.png" alt="" class="lupa">
             </div>
 
@@ -24,7 +24,7 @@
             </div>
 
             <div class="profile_div">
-                <img id="userProfileImage" src="./files/foto_perfil.png" alt="" class="foto_perfil">
+                <img id="userProfileImage" alt="" class="foto_perfil">
             </div>
 
         </div>
