--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
         <footer>
             <div class="footer">
+                <h1>DOE MAIS</h1>
                 <img src="./files/footer.png" class="apps_footer" alt="">
             </div>
         </footer>
